--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,9 +16,15 @@
         }
     ],
     "compilerOptions": {
+        "lib": [ "es2015" ],
+        "types": [
+            "naive-ui/volar"
+        ],
         "baseUrl": ".",
         "paths": {
-          "@/*": ["src/*"]
+            "@/*": [
+                "src/*"
+            ]
         }
-      }
+    }
 }
